# Insta-Downloader

./: .gitignore  Readme.md
Backend/: .gitignore  Cargo.toml  README.md
Backend/src/: main.rs
Backend/src/handlers/: insta_post.rs  mod.rs  post.rs  reel.rs  story.rs
Backend/src/routes/: download.rs  health.rs
Backend/src/services/: downloader.rs  extractor.rs  mod.rs
Backend/src/utils/: error.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  DebugPanel.jsx  index.css
frontend/src/components/: DownloadForm.jsx  DownloadStatus.jsx  LoadingSpinner.jsx  MediaGallery.jsx  MediaPreview.jsx  MediaQuickPreview.jsx  MediaStoryViewer.jsx  StoryCarousel.jsx
frontend/src/store/: index.js
frontend/src/store/slices/: downloadSlice.js  mediaSlice.js  uiSlice.js
frontend/src/utils/: mediaHelper.js  renderHelpers.js  renderUtils.js  urlHelper.js
